# alphagenome

./: .gitignore  README.md  pyproject.toml
examples/: basic_prediction.py
outputs/: MANIFEST.yaml
reports/: detailed_report.md  learnlm_report_complete.html
reports/detailed-report/: 00-INDEX.md  01-setup-and-input.md  02-prediction.md  03-gene-expression.md  04-chromatin.md  05-epigenomics.md  06-splicing-and-3d.md  07-variant-scoring.md  08-ism-analysis.md  09-tall-workflow.md  10-appendix.md
results/analysis_workflow/: ANALYSIS_SUMMARY.md  variant_analysis_results.json
results/batch_variant_scoring/: ANALYSIS_SUMMARY.md  EXECUTION_LOG.md  README.md  variant_scores_summary.json
results/chip_tf_analysis/: results.json
results/essential_commands/: README.md  results.json  run_essential_commands.py
results/ism_256bp/: results.json
results/procap_visualization/: results.json
results/quick_start/: results.json  run_quick_start.py
results/splice_site_usage/: results.json
results/tissue_ontology/: ontology_summary.json  ontology_terms.json
results/variant_scoring_cli/: variant_summary.json
scripts/: analyze_batch_results.py  generate_batch_summary.py  run_analysis_workflow.py  run_batch_variant_scoring.py  run_chip_tf_analysis.py  run_ism_256bp.py  run_procap_visualization.py  run_splice_site_usage.py  run_variant_scoring_cli.py  run_visualization_tour.py  tissue_ontology_mapping.py  verify_install.py
tutorials/: batch_variant_scoring.ipynb  essential_commands.ipynb  example_analysis_workflow.ipynb  tissue_ontology_mapping.ipynb
(+3 files in other folders)
